--- a/ExperimentalSwift/Base.lproj/Main.storyboard
+++ b/ExperimentalSwift/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="P9O-xb-so5">
-                                        <rect key="frame" x="16" y="16" width="288" height="440"/>
+                                        <rect key="frame" x="16" y="16" width="288" height="380"/>
                                         <subviews>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="raspberry-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="zmw-WF-U7M">
                                                 <rect key="frame" x="0.0" y="0.0" width="288" height="200"/>
@@ -54,15 +54,15 @@
                                                     <segue destination="dBi-5B-inw" kind="show" id="Jc5-kC-ULx"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4BZ-8L-ueE" customClass="BasicButton" customModule="DesignableViews">
-                                                <rect key="frame" x="0.0" y="336" width="288" height="44"/>
+                                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4BZ-8L-ueE" customClass="BasicButton" customModule="DesignableViews">
+                                                <rect key="frame" x="0.0" y="328" width="288" height="0.0"/>
                                                 <state key="normal" title="Led Intensity"/>
                                                 <connections>
                                                     <segue destination="QEv-Hz-mF3" kind="show" id="6ps-0w-Jcx"/>
                                                 </connections>
                                             </button>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ibC-ab-yh4" customClass="BasicButton" customModule="DesignableViews">
-                                                <rect key="frame" x="0.0" y="396" width="288" height="44"/>
+                                                <rect key="frame" x="0.0" y="336" width="288" height="44"/>
                                                 <state key="normal" title="One Digit Display"/>
                                                 <connections>
                                                     <segue destination="pLN-7u-hbF" kind="show" id="nVD-Qr-xM8"/>
@@ -167,37 +167,58 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="VGf-7l-BZm">
-                                <rect key="frame" x="16" y="239" width="288" height="90"/>
+                                <rect key="frame" x="40" y="88" width="240" height="366"/>
                                 <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="segment-display-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="8RB-zZ-8I5">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="200"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="200" id="W9p-LA-Kq6"/>
+                                        </constraints>
+                                    </imageView>
                                     <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7KY-DX-RKr">
-                                        <rect key="frame" x="0.0" y="0.0" width="288" height="30"/>
+                                        <rect key="frame" x="0.0" y="216" width="240" height="30"/>
                                         <nil key="textColor"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EOh-b9-nLJ" customClass="BasicButton" customModule="DesignableViews">
-                                        <rect key="frame" x="0.0" y="46" width="288" height="44"/>
-                                        <state key="normal" title="Button"/>
+                                        <rect key="frame" x="0.0" y="262" width="240" height="44"/>
+                                        <state key="normal" title="Display Digit"/>
                                         <connections>
                                             <action selector="displayDigit:" destination="pLN-7u-hbF" eventType="touchUpInside" id="bas-w5-tpo"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nHc-J9-qOn" customClass="BasicButton" customModule="DesignableViews">
+                                        <rect key="frame" x="0.0" y="322" width="240" height="44"/>
+                                        <state key="normal" title="Switch Off"/>
+                                        <connections>
+                                            <action selector="switchOffButtonTouched:" destination="pLN-7u-hbF" eventType="touchUpInside" id="pjE-du-Dho"/>
                                         </connections>
                                     </button>
                                 </subviews>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
-                            <constraint firstItem="VGf-7l-BZm" firstAttribute="centerX" secondItem="Aie-YS-nhc" secondAttribute="centerX" id="8U1-Oi-QjI"/>
-                            <constraint firstItem="VGf-7l-BZm" firstAttribute="leading" secondItem="Aie-YS-nhc" secondAttribute="leadingMargin" id="98P-IN-STw"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="VGf-7l-BZm" secondAttribute="trailing" id="QaL-Kz-C8y"/>
-                            <constraint firstItem="VGf-7l-BZm" firstAttribute="centerY" secondItem="Aie-YS-nhc" secondAttribute="centerY" id="drR-cP-Kx2"/>
+                            <constraint firstItem="VGf-7l-BZm" firstAttribute="top" secondItem="ZfX-Ij-ZIX" secondAttribute="bottom" constant="24" id="M6T-8a-1Ka"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="VGf-7l-BZm" secondAttribute="trailing" constant="24" id="l3J-yW-fhv"/>
+                            <constraint firstItem="VGf-7l-BZm" firstAttribute="leading" secondItem="Aie-YS-nhc" secondAttribute="leadingMargin" constant="24" id="x3N-jw-2Y0"/>
                         </constraints>
+                        <connections>
+                            <outletCollection property="gestureRecognizers" destination="LEV-fj-uJG" appends="YES" id="mNR-py-2Ch"/>
+                        </connections>
                     </view>
                     <connections>
                         <outlet property="digitTextField" destination="7KY-DX-RKr" id="dI0-YZ-zIs"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GxK-QE-jzS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="LEV-fj-uJG">
+                    <connections>
+                        <action selector="tapGestureRecognized:" destination="pLN-7u-hbF" id="ccV-pJ-MBY"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1669" y="698"/>
         </scene>
@@ -509,5 +530,6 @@
         <image name="configuration-placeholder" width="256" height="256"/>
         <image name="led-placeholder" width="300" height="250"/>
         <image name="raspberry-placeholder" width="350" height="236"/>
+        <image name="segment-display-placeholder" width="300" height="300"/>
     </resources>
 </document>
